--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h2>You got to go down a lot of wrong roads to find the right one.</h2>
     <p>And seems like highway One is the right one.</p>
 
-    <img src="assets/images/los-angeles.jpg" alt="Pavel in Los Angeles.">
+    <img src="assets/images/los-angeles.jpg" alt="Pavel in Los Angeles">
 
     
   
