All npm install

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <img src="./assets/images/california-logo.jpg">
-    <a href="#">Get in Touch</a>
+    <a href="#">Get in Touch!!!</a>
     <nav>
       <ul>
         <li><a href="#grand-canyon">Grand Canyon</a></li>
