--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   <title>Our California</title>
   <meta name="keywords" content="Travel">
   <meta name="description" content="Our trip to west coast the best coast.">
+
+  <link rel="stylesheet" href="temp/styles/styles.css">
+
 </head>
 <body>
   <header>
     <img src="./assets/images/california-logo.jpg">
-    <a href="#">Get in Touch!!!</a>
+    <a href="#" class="btn">Get in Touch</a>
     <nav>
       <ul>
         <li><a href="#grand-canyon">Grand Canyon</a></li>
@@ -22,14 +25,18 @@
 
   <div class="grand-canyon">
     <img src="./assets/images/pic1.jpg" alt="Pavel facing the Grand Canyon">
-    <h1>Our California</h1>
-    <h2>Grand Canyon</h2>
-    <p>Travel makes one modest. You see what a tiny place you occupy in this world.</p>
+    <div class="grand-canyon__text-content">
+    <h1 class="grand-canyon__title">Our California</h1>
+    <h2 class="grand-canyon__subtitle">Grand Canyon</h2>
+    <p class="grand-canyon__quote">Travel makes one modest. You see what a tiny place you occupy in this world.</p>
+    <a href="#" class="btn btn--orange btn--large">Get in Touch</a>
+   </div>
   </div>
 
   <div id="grand-canyon">
     <h2>We started our trip from Grand Canyon.</h2>
     <h3>Ever since, we’ve been thinking about this breathtaing place.</h3>
+
     <img src="assets/images/julia-and-vera.jpg" alt="Julia and Vera seating on the beanch.">
     <p>This is our trip to California. I'll share with you our pictures and great moment.<br> We started our trip from sunny Arizona. Our friends Alex and Vera live there and they were amaizing guids during our stay in Arizona.<br> We visited <em>Grand Canyon</em> and <em>Horseshoe Bend</em>. They located within 3 hours of drive from each other and if you wake up earlier one day should be enogh to see both places. We rented a nice cabin through AirBnb in Flagstaff. We're impressed how mother nature can be so beauitiful. Both places was breathtaking and ofcourse ideal for serious photoshoot.</p>
     <img src="./assets/images/pavel-julia.jpg" alt="Pavel lifting Julia">
@@ -96,7 +103,7 @@
   </div>
 
   <footer>
-    <p>Copyright &copy; 2018 Our California. All rights reserved. <a href="#">Get in Touch</a></p>
+    <p>Copyright &copy; 2018 Our California. All rights reserved. <a href="#" class="btn btn--orange">Get in Touch</a></p>
   </footer>
 </body>
 </html>
