--- a/app/index.html
+++ b/app/index.html
@@ -17,11 +17,15 @@
       <img src="assets/images/california-logo1.jpg">
     </div>
 
-    <div class="site-header__menu-icon"></div>
+    <div class="site-header__menu-icon">
+      
+      <div class="site-header__menu-icon__middle"></div>
+      
+    </div>
       <div class="site-header__menu-content">
-        <div class="site-header__btn-container">
+        <!--<div class="site-header__btn-container">
         <a href="#" class="btn">Get in Touch</a>
-      </div>
+      </div> -->
        <nav class="primary-nav primary-nav--pull-right">
         <ul>
          <li><a href="#grand-canyon-day">Grand Canyon</a></li>
