--- a/app/index.html
+++ b/app/index.html
@@ -54,8 +54,8 @@
 
   <div class="grand-canyon">
     <picture>
-      <source srcset="/assets/images/main-photo.jpg" media="(min-width: 640px)">
-      <img src="/assets/images/main-photo-crop2.jpg" alt="Julia and Vera seating on the beanch." class="grand-canyon__image">
+      <source srcset="assets/images/main-photo.jpg" media="(min-width: 640px)">
+      <img src="assets/images/main-photo-crop2.jpg" alt="Julia and Vera seating on the beanch." class="grand-canyon__image">
     </picture>
 
      <div class="grand-canyon__text-content">
@@ -70,7 +70,7 @@
   <div id="grand-canyon-day" class="page-section" data-matching-link="#grand-canyon-link">
     <div class="wrapper">
       <h2 class="headline headline--centered headline--light headline--b-margin-small">We started our trip from <strong>Grand Canyon</strong>.</h2>
-      <h3 class="headline headline--centered headline--light headline--orange headline--small headline--narrow headline--b-margin-large">Ever since, we’ve been thinking about this <strong>breathtaking place.</strong></h3>
+      <h3 class="headline headline--centered headline--light headline--orange headline--small headline--narrow headline--b-margin-large">Ever since, we have been thinking about this <strong>breathtaking place.</strong></h3>
 
      
     <div class="wrapper wrapper--medium wrapper--b-margin">
@@ -85,7 +85,7 @@
         </picture>
       </div>
       <div class="row__text-medium">
-        <h2 class="headline headline--centered headline--no-t-margin">Some text here...</h2>
+        <h2 class="headline headline--centered headline--no-t-margin">Arizona</h2>
         <div class="generic-container">
         <p>This is our trip to California. I'll share with you our pictures and great moment.<br> We started our trip from sunny Arizona. Our friends Alex and Vera live there and they were amaizing guids during our stay in Arizona.<br> We visited <em>Grand Canyon</em> and <em>Horseshoe Bend</em>. <p>They located within 3 hours of drive from each other and if you wake up earlier one day should be enogh to see both places.</p> <p>We rented a nice cabin through <a href="https://www.airbnb.com/rooms/16893251?guests=1&adults=1" target="_blank">AirBnb</a> in Flagstaff. We're impressed how mother nature can be so beauitiful. Both places was breathtaking and ofcourse ideal for serious photoshoot.</p>
 
@@ -197,7 +197,7 @@
            <img src="assets/images/ira-hero.jpg">
            </div>
            <h3 class="heroes__title">Ira</h3>
-           <p>&ldquo;Knows how to calm you down. Don’t mess with her!&rdquo;</p>
+           <p>&ldquo;Knows how to calm you down. Do not mess with her!&rdquo;</p>
          </div>
         </div>
 
@@ -230,7 +230,7 @@
              <img src="assets/images/alex-hero.jpg">
             </div>
            <h3 class="heroes__title">Alex</h3>
-           <p>&ldquo;Don’t even try to find photographer better then him.&rdquo;</p>
+           <p>&ldquo;You will not find photographer better then him.&rdquo;</p>
          </div>
        </div>
 
